# AIMS_course

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  api_test.py  bash.exe.stackdump  best_model.joblib  cleaned_sample.csv  entrypoint.sh  era5_temperature_data.nc  fraud_detector.pkl  nginx.conf  pyproject.toml  run_dagster.sh  test_predictions.csv
.dagster_home/: dagster.yaml  workspace.yaml
.dagster_home/aduuna/: dagster.yaml  workspace.yaml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/:  build_and_deploy.yml  code_checks.yml  main.yml  opentofu-provision.yml
.gradio/flagged/: dataset1.csv  dataset2.csv
.venv_gradio/: pyvenv.cfg
.venv_plotly/: pyvenv.cfg
api/: main.py
gradioapp/: gradio_main.py
opentofu/: .terraform.lock.hcl  cloud_config.sh  main.tf  providers.tf  variables.tf
report_agent_app/: app.css  fandresena_agent.py  gradioapp.py  web_search.py
src/api/: main.py  models.py  safe_eval.py
src/genai/: __init__.py  source.py
src/gradio/: app.py
src/gradioapp/: app.py
src/students/0xayman/api/: main.py
src/students/0xayman/dagster/: definitions.py
src/students/0xayman/gradioapp/: gradio_app.py  image_manipulation.py  model.pkl  writer.py
src/students/Aarondard/api/: main.py
src/students/Aarondard/gradioapp/: assignment1.py  heart_disease_app.py  text_manipulation.py
src/students/Abdelkhalig-elfatih/agents/: agent.py  readme_file.md  requirements.txt
src/students/Abdelkhalig-elfatih/api/: main.py
src/students/Abdelkhalig-elfatih/dagster/: definitions.py
src/students/Abdelkhalig-elfatih/gradioapp/: agent.py  agent_app.py
src/students/Abdulrasheed1729/: no_report.txt  pep8_violations_example.py  report_apis.txt  report_dagster.txt  report_mlops.txt
src/students/Abdulrasheed1729/api/: main.py
src/students/Abdulrasheed1729/gradioapp/: report_writer_app.py
src/students/Abdulrasheed1729/report_writer/: agents.py  prompts.py  vaidator.py  word_counter.py  workflow.py
src/students/AndrianinaBA/: text_analyzer_app.py
src/students/AndrianinaBA/api/: main.py
src/students/AndrianinaBA/dagster/: definitions.py
src/students/AndrianinaBA/gradioapp/: heart_disease_app.py
src/students/AndrianinaBA/our_gradio_app/: app.py  our_app.py
src/students/Andrianinaba/api/: safe_eval.py
src/students/DanielAyomide-git/api/: fraud_model.pkl  main.py
src/students/DanielAyomide-git/dagster/: definitions.py
src/students/DanielAyomide-git/essay_writer/: agent.py  tools.py
src/students/DanielAyomide-git/gradioapp/: fraud_detection_app.py  text_app.py  writerapp.py
src/students/HayBeeCoder/: pep8_violations_example.py
src/students/HayBeeCoder/api/: main.py
src/students/HayBeeCoder/dagster/: definitions.py
src/students/HayBeeCoder/gradioapp/: __init__.py  css.py  effects.py  filters.py  fraud.py  image_app.py  image_utils.py  processing.py  text.py  ui.py
src/students/MELAI-1/agentic/: critic_agent.py  fact_checker_agent.py  research_agent.py  writer_agent.py
src/students/MELAI-1/api/: main.py
src/students/MELAI-1/gradioapp/: agentic_gradio.py  app.py  image_assigment.py
src/students/Magguire/: .gitignore  pep8_violations_example.py
src/students/Magguire/agents/: gradio_app.py  llms_workflow.py
src/students/Magguire/api/: main.py
src/students/Magguire/dagster/: definitions.py
src/students/Magguire/gradioapp/: fraud_detection_app.py
src/students/Mohammed-Nagi/: pep8_violations_example.py
src/students/Mohammed-Nagi/api/: main.py
src/students/Mohammed-Nagi/dagster/: definitions.py
src/students/Mohammed-Nagi/gradioapp/: fraud_app.py  report.py  text_app.py
src/students/Mohammed-Nagi/reporter/: __init__.py  agent.py  main.py  tools.py
src/students/RadoFitiavana/api/: agent_graph.py  main.py  models.py
src/students/RadoFitiavana/gradioapp/: image_processor_app.py
src/students/TIAO-Eliasse/: assignment1app1.py  gradio1.py  pep8_violatons_example.py
src/students/TIAO-Eliasse/api/: main.py
src/students/TIAO-Eliasse/dagster/: definitions.py  gradio_applica.py
src/students/TIAO-Eliasse/gradioapp/: Assignment1propoB.py  assignment1propoB.py  (+1 more)
src/students/ahounkanrin/: pep8_violations_example.py
src/students/aimeloick-aims-ai/: movie_descriptions_cache.json  movie_images_cache.json  user_ratings.db  user_ratings_manager.py
src/students/angeadimanana/: test_api.py
src/students/eak0mo/: main.env  pep8_violations.py  pep8violations.py
src/students/emmanuel-olateju/: pep8_violations_example.py
src/students/joshsalako/: pep8_violations_example.py
src/students/khadijaedarzi9/: app.py
src/students/oliverangelil/: basic_fastapi_example.py
src/students/rexsimiloluwah/: article.md  batch_predictions_results.csv  sample_batch.csv
src/students/vicentmwanda/: references.txt  report.txt
tests/: test_utiliity_functions.py
utils/: utility_functions.py
(+458 files in other folders)
