[project]
name = "AIMS_MLOps"
version = "0.1.0"
license = {file = "LICENSE"}
description = "MLOps Course for AIMS SA"
readme = "README.md"
requires-python = ">=3.12"

authors =  [
    {name = "Oliver Angelil", email = "oliver@ishango.ai"},
    {name = "Cyrille Feudjio", email = "cyrille@ishango.ai"}
]

dependencies = [
    "numpy>=2.2.2",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "scipy>=1.15.1",
]

[project.urls]
Homepage = "https://ishango.ai/"

[project.scripts]
ml = "ml.model:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"

[tool.pyright]
exclude = []
typeCheckingMode = "basic"
reportUntypedFunctionDecorator = false
reportMissingTypeStubs = false
colorOutput = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
preview = true

#this is a replacement for black. not sure whether to use it.
#[tool.ruff.format]

# not yet sure what this does
[tool.uv]
package = true
