[project]
name = "AIMS_SA_Course"
version = "0.1.0"
license = {file = "LICENSE"}
description = "AIMS SA Course on building end-to-end ML applications"
readme = "README.md"
requires-python = "==3.12.9"

authors =  [
    {name = "Oliver Angelil", email = "oliver@ishango.ai"},
    {name = "Cyrille Feudjio", email = "cyrille@ishango.ai"}
]

dependencies = [
    "cdsapi>=0.7.6",
    "dagster>=1.10.14",
    "dagster-mlflow>=0.26.14",
    "dagster-webserver>=1.10.14",
    "fastapi[standard]>=0.115.12",
    "gradio>=5.27.1",
    "mlflow>=2.22.0",
    "netcdf4>=1.7.2",
    "numpy==2.2.2",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyright==1.1.394",
    "pytest==8.3.4",
    "ruff==0.9.5",
    "scipy==1.15.1",
    "uvicorn>=0.34.0",
    "xarray>=2025.4.0",
    "hyperopt==0.2.7"
]

[project.urls]
Homepage = "https://ishango.ai/"

[project.scripts]
ml = "ml.model:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"

[tool.pyright]
exclude = []
typeCheckingMode = "standard"
colorOutput = true
executionEnvironments= [
    { root= "src/students/", reportMissingImports= "warning"},
    { root= "."}
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
preview = true

#this is a replacement for black. not sure whether to use it.
#[tool.ruff.format]

# required for a src and test layout
[tool.uv]
package = true

[tool.dagster]
module_name = "src.students.example.mlflow.era5_temperature_project.era5_pipeline.assets"
